--- a/reload_all_tabs/options.html
+++ b/reload_all_tabs/options.html
@@ -1,4 +1,3 @@
-<!-- Copyright under GPL, Mohamed Mansour 2009 (http://mohamedmansour.com) -->
 <!doctype html> 
 <html>
 <head>
@@ -15,9 +14,12 @@ var bkg = chrome.extension.getBackgroundPage();
 function saveOptions() {
   // Set the extension settings.
   bkg.settings.reloadAllWindows = document.getElementById('reloadAllWindows').checked;
+  bkg.settings.shortcutKeyShift = document.getElementById('shortcutKeyShift').checked;
+  bkg.settings.shortcutKeyAlt = document.getElementById('shortcutKeyAlt').checked;
+  bkg.settings.shortcutKeyCode = parseInt(document.getElementById('shortcutKeyCode').value);
 
   // Update status to let user know options were saved.
-  var info = document.getElementById('options_saved');
+  var info = document.getElementById('info-message');
   info.style.display = 'inline';
   info.style.opacity = 1;
   setTimeout(function() {
@@ -29,7 +31,11 @@ function saveOptions() {
 * Restore all options.
 */
 function restoreOptions() {
+  document.getElementById('version').innerHTML = ' (v' + bkg.settings.version + ')';
   document.getElementById('reloadAllWindows').checked = bkg.settings.reloadAllWindows;
+  document.getElementById('shortcutKeyShift').checked = bkg.settings.shortcutKeyShift;
+  document.getElementById('shortcutKeyAlt').checked = bkg.settings.shortcutKeyAlt;
+  document.getElementById('shortcutKeyCode').value = bkg.settings.shortcutKeyCode;
 }
 </script>
 </head>
@@ -38,50 +44,59 @@ function restoreOptions() {
   <form onsubmit="return false;">
   <div id="body-container">
     <div id="header">
-      <h1>Reload All Tabs</h1>
+      <h1>Reload All Tabs <em id="version"></em></h1>
     </div>
-    <div id="extensionTemplate">
-      <div id="container" class="vbox-container">
-        <div id="top" class="wbox" style="padding-right: 5px"> 
-          <div class="section-header"> 
-            <table cellpadding="0" cellspacing="0" width="100%"> 
-              <tr valign="center"> 
-                <td> 
-                  <span class="section-header-title">Options</span> 
-                </td> 
-              </tr> 
-            </table> 
-          </div> 
-        </div> 
-        <div class="wbox-dev-mode"> 
-          <div class="developer-mode"> 
-            <table width="100%" cellpadding="2" cellspacing="0"> 
-              <tr>
-                <td width="200" height="30">Reload all windows:</td>
-                <td><input id="reloadAllWindows" type="checkbox"></td>
-              </tr>
-            </table>
-          </div>
-        </div>
+    <div id="extension-template">
+      <div id="extension-header">Options</div>
+      <div id="extension-options">
+        <dl>
+          <dt>Reload all windows:</dt>
+          <dd><input id="reloadAllWindows" type="checkbox" /></dd>
+          <dt>Keyboard shortcut:</dt>
+          <dd>
+            Ctrl <input type="checkbox" checked="checked" disabled="disabled"/> + 
+            Shift <input id="shortcutKeyShift" type="checkbox" /> +
+            Alt <input id="shortcutKeyAlt" type="checkbox" /> +
+            <select id="shortcutKeyCode">
+              <option value="65">a</option>
+              <option value="66">b</option>
+              <option value="67">c</option>
+              <option value="68">d</option>
+              <option value="69">e</option>
+              <option value="70">f</option>
+              <option value="71">g</option>
+              <option value="72">h</option>
+              <option value="73">i</option>
+              <option value="74">j</option>
+              <option value="75">k</option>
+              <option value="76">l</option>
+              <option value="77">m</option>
+              <option value="78">n</option>
+              <option value="79">o</option>
+              <option value="80">p</option>
+              <option value="81">q</option>
+              <option value="82">r</option>
+              <option value="83">s</option>
+              <option value="84">t</option>
+              <option value="85">u</option>
+              <option value="86">v</option>
+              <option value="87">w</option>
+              <option value="88">x</option>
+              <option value="89">y</option>
+              <option value="90">z</option>
+            </select>
+          </dd>
+        </dl>
       </div>
-      <div class="content">
-        <div class="extension" jsselect="extensions">
-          <table width="100%" cellpadding="2" cellspacing="0">
-            <tr>
-              <td width="62" height="50" align="center" valign="top"> </td>
-              <td valign="top"> </td>
-              <td width="100"> </td>
-              <td align="right" valign="center" width="700">
-                <span id="options_saved" class="info-message">Options saved!</span>
-                <button onclick="saveOptions();">Save</button>
-                <button onclick="window.close();">Close</button>
-              </td> 
-          </tr> 
-        </table> 
+      <div id="extension-footer">
+        <span id="info-message">Options saved!</span>
+        <button onclick="saveOptions();">Save</button>
+        <button onclick="window.close();">Close</button>
       </div>
-      <div class="credits">
-        Extension developed by <a href="http://www.mohamedmansour.com">Mohamed Mansour</a>, 
-        Icon by <a href="http://www.mouserunner.net/">Ken Saunders</a>
+    </div>
+    <div id="credits">
+      Extension developed by <a href="http://www.mohamedmansour.com">Mohamed Mansour</a>, 
+      Icon by <a href="http://www.mouserunner.net/">Ken Saunders</a>
     </div>
   </div>
   </form>
