--- a/reload_all_tabs/options.html
+++ b/reload_all_tabs/options.html
@@ -37,6 +37,15 @@ function restoreOptions() {
   document.getElementById('shortcutKeyAlt').checked = bkg.settings.shortcutKeyAlt;
   document.getElementById('shortcutKeyCode').value = bkg.settings.shortcutKeyCode;
 }
+
+/**
+* Visit the Icon Extension Page.
+*/
+function visitIconExtensionPage() {
+  var link = "https://chrome.google.com/extensions/detail/" + bkg.settings.icon_id;
+  chrome.tabs.create({url: link});
+  
+}
 </script>
 </head>
 
@@ -46,9 +55,19 @@ function restoreOptions() {
     <div id="header">
       <h1>Reload All Tabs <em id="version"></em></h1>
     </div>
-    <div id="extension-template">
-      <div id="extension-header">Options</div>
-      <div id="extension-options">
+    <div class="extension-template">
+      <div class="extension-header">Browser Action</div>
+      <div class="extension-options">
+        <img src="browser-action.png" />
+        <p>To show the Reload All Tabs button next to the address bar you would need to click <strong>Install</strong>
+           on the <a href="#" onclick="visitIconExtensionPage(); return false;">Reload All Tabs - Browser Action</a>
+           page. This is a very light weight extension that just communicates to the other extension.</p>
+        <p>To remove the button, right click on the icon and choose <strong>Disable</strong>.</p>
+      </div>
+    </div>
+    <div class="extension-template">
+      <div class="extension-header">Options</div>
+      <div class="extension-options">
         <dl>
           <dt>Reload all windows:</dt>
           <dd><input id="reloadAllWindows" type="checkbox" /></dd>
