--- a/reload_all_tabs_extension_button/error.html
+++ b/reload_all_tabs_extension_button/error.html
@@ -78,7 +78,7 @@ function visitExtensionPage() {
         <p>To show the Reload All Tabs button next to the address bar you would need to click <strong>Install</strong>
            on the <a href="#" onclick="visitExtensionPage(); return false;">Reload All Tabs</a> extension page. This 
            extension depends on it. </p>
-        <p>For any more question please let me know!</p>
+        <p>For any more question please let me know! hello@mohamedmansour.com</p>
       </div>
     </div>
     <div id="credits">
