Fix the way we fetch the version number from the manifest in a synchronous matter. Before we were using an asynchronous incorrect matter.

--- a/reload_all_tabs/background.html
+++ b/reload_all_tabs/background.html
@@ -89,14 +89,9 @@
     var version = 'NaN';
     var xhr = new XMLHttpRequest();
     xhr.open('GET', chrome.extension.getURL('manifest.json'), false);
-    xhr.onreadystatechange = function() {
-      if (this.readyState == 4) {
-        var manifest = JSON.parse(this.responseText);
-        version = manifest.version;
-      }
-    };
-    xhr.send();
-    return version;
+    xhr.send(null);
+    var manifest = JSON.parse(xhr.responseText);
+    return manifest.version;
   }
 
   /**
