Add link to source code in options page.

--- a/reload_all_tabs/options.html
+++ b/reload_all_tabs/options.html
@@ -114,6 +114,7 @@ function visitIconExtensionPage() {
     </div>
     <div id="credits">
       Extension developed by <a href="http://www.mohamedmansour.com">Mohamed Mansour</a>, 
+      Source Code available in <a href="http://github.com/mohamedmansour/reload-all-tabs-extension">GitHub</a>,
       Icon by <a href="http://www.mouserunner.net/">Ken Saunders</a>
     </div>
   </div>
