Use correct doctype for HTML5 to make favicon automatically present.

--- a/reload_all_tabs/options.html
+++ b/reload_all_tabs/options.html
@@ -1,8 +1,7 @@
-<!doctype html> 
+<!DOCTYPE html>
 <html>
 <head>
 <title>Reload All Tabs Options</title>
-<link rel="shortcut icon" href="icon16.png"> 
 <link rel="stylesheet" type="text/css" href="options.css">
 <script type="text/javascript" src="keyboard_handler.js"></script>
 <script type="text/javascript">
