Fix naming convention to camel case for context menu

--- a/reload_all_tabs/background.html
+++ b/reload_all_tabs/background.html
@@ -144,7 +144,7 @@
     if (visible) {
       var contextMenuProperty = {
         type: 'normal',
-        title: 'Reload all Tabs',
+        title: 'Reload all tabs',
         contexts: ['all'],
         onclick: reload
       };
