--- a/reload_all_tabs_extension_button/error.html
+++ b/reload_all_tabs_extension_button/error.html
@@ -70,20 +70,23 @@ function visitExtensionPage() {
 <body> 
   <div id="body-container">
     <div id="header">
-      <h1>This add-on requires Browser Action extension!</h1>
+      <h1>This add-on is no longer needed!</h1>
     </div>
     <div class="extension-template">
       <div class="extension-header">Requirements</div>
       <div class="extension-options">
-        <p>To show the Reload All Tabs button next to the address bar you would need to click <strong>Install</strong>
-           on the <a href="#" onclick="visitExtensionPage(); return false;">Reload All Tabs</a> extension page. This 
-           extension depends on it. </p>
-        <p>For any more question please let me know! hello@mohamedmansour.com</p>
+        <p>As of Chrome version 9 this extension is no longer needed. The browser
+           action is now bundled up with the main 
+           <a href="#" onclick="visitExtensionPage(); return false;">Reload All Tabs</a>
+           extension page. </p>
+        <p>Please uninstall this extension.</p>
+        <p>For any more question or help please let me know! hello@mohamedmansour.com</p>
       </div>
     </div>
     <div id="credits">
       Extension developed by <a href="http://www.mohamedmansour.com">Mohamed Mansour</a>, 
       Icon by <a href="http://www.mouserunner.net/">Ken Saunders</a>
+      Follow me on Twitter <a href="http://twitter.com/mohamedmansour">@mohamedmansour</a>
     </div>
   </div>
 </body>
