Introduce myself with Twitter!

--- a/reload_all_tabs/options.html
+++ b/reload_all_tabs/options.html
@@ -55,6 +55,18 @@ function openExtensionPage() {
     <div id="header">
       <h1>Reload All Tabs <em id="version"></em></h1>
     </div>
+    <p>
+      Make sure you save the settings after your done editing!
+      <a
+       href="https://chrome.google.com/webstore/detail/midkcinmplflbiflboepnahkboeonkam">
+       Visit extension page
+      </a>,
+      <a
+       href="http://groups.google.com/group/mohamedmansour-extensions">
+       File bugs and suggestions
+      </a><br/><br/>
+      You should follow me on Twitter <a href="http://twitter.com/mohamedmansour">@mohamedmansour</a>
+    </p>
     <div class="extension-template">
       <div class="extension-header">Browser Action</div>
       <div class="extension-options">
@@ -119,8 +131,7 @@ function openExtensionPage() {
     <div id="credits">
       Extension developed by <a href="http://www.mohamedmansour.com">Mohamed Mansour</a>, 
       Source Code available in <a href="http://github.com/mohamedmansour/reload-all-tabs-extension">GitHub</a>,
-      Icon by <a href="http://www.mouserunner.net/">Ken Saunders</a><br/>
-      Follow me on Twitter <a href="http://twitter.com/mohamedmansour">@mohamedmansour</a>
+      Icon by <a href="http://www.mouserunner.net/">Ken Saunders</a>
     </div>
   </div>
   </form>
